--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <title>Mnswppr.</title>
 
+    <link rel="stylesheet" href="style.css">
+
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <script language="javascript" src="libraries/p5.dom.js"></script>
     <script language="javascript" src="libraries/p5.sound.js"></script>
 
     <script src="sketch.js"></script>
+    <script src="Cell.js"></script>
 
 </head>
 
 <body>
+<h1>Mineswepper<span style="color: rgb(255, 80, 100)">.</span></h1>
+<div id="footer">
+    <p id="credits"><a href="https://github.com/vaniashows">Ivan Ermakov</a> @2018</p>
+</div>
 </body>
 
 </html>
