--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 </head>
 
-<body>
+<!--<body>-->
+<body oncontextmenu="return false;">
 <h1>Mineswepper<span style="color: rgb(255, 80, 100)">.</span></h1>
 <div id="footer">
     <p id="credits"><a href="https://github.com/vaniashows">Ivan Ermakov</a> @2018</p>
