--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
     <script language="javascript" src="libraries/p5.dom.js"></script>
     <script language="javascript" src="libraries/p5.sound.js"></script>
 
-    <script src="sketch.js"></script>
-    <script src="Cell.js"></script>
-
 </head>
 
 <!--<body>-->
 <body oncontextmenu="return false;">
 <h1>Mineswepper<span style="color: rgb(255, 80, 100)">.</span></h1>
+<div class="scores">
+    <p id="minesLeft">0</p>
+</div>
 <div id="footer">
     <p id="credits"><a href="https://github.com/vaniashows">Ivan Ermakov</a> @2018</p>
 </div>
+
+<script src="sketch.js"></script>
+<script src="Cell.js"></script>
 </body>
 
 </html>
