--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body oncontextmenu="return false;">
 <h1>Mineswepper<span style="color: rgb(255, 80, 100)">.</span></h1>
 <div class="scores">
-    <p id="minesLeft">0</p>
+    <p>Mines left: <span id="minesLeft">0</span></p>
 </div>
 <div id="footer">
     <p id="credits"><a href="https://github.com/vaniashows">Ivan Ermakov</a> @2018</p>
