--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Vania loh.</title>
+    <title>Vania ne loh.</title>
 
     <link rel="stylesheet" href="style.css">
 
