--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Mnswppr.</title>
+    <!--<title>Mnswppr.</title>-->
+    <title>lol.</title>
 
     <link rel="stylesheet" href="style.css">
 
