--- a/index.html
+++ b/index.html
@@ -15,9 +15,21 @@
 <!--<body>-->
 <body oncontextmenu="return false;">
 <h1>Mineswepper<span style="color: rgb(255, 80, 100)">.</span></h1>
-<div class="scores">
-    <p>Mines left: <span id="minesLeft">0</span></p>
+
+<div id="canvas">
+    <div id="info">
+        <p>Mines left: <span id="minesLeft">0</span></p>
+        <form id="difficulty" action="">
+            <p>Difficulty: </p>
+            <select name="cars">
+                <option value="saab">Beginner</option>
+                <option value="mercedes">Intermediate</option>
+                <option value="audi">Expert</option>
+            </select>
+        </form>
+    </div>
 </div>
+
 <div id="footer">
     <p id="credits"><a href="https://github.com/vaniashows">Ivan Ermakov</a> @2018</p>
 </div>
