--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 </head>
 
-<!--<body>-->
 <body oncontextmenu="return false;">
 <h1>Mineswepper<span style="color: rgb(255, 80, 100)">.</span></h1>
 
@@ -20,7 +19,7 @@
     <div id="info">
         <p>Mines left: <span id="minesLeft">0</span></p>
         <form id="difficulty" onchange="setup()">
-            <p>Difficulty: </p>
+            <p id="difficulty-label">Difficulty: </p>
             <select id="levels" name="levels">
                 <option value="0">Beginner</option>
                 <option value="1">Intermediate</option>
