add level 'PRO'

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <option value="0">Beginner</option>
                 <option value="1">Intermediate</option>
                 <option value="2">Expert</option>
+                <option value="3">Pro</option>
             </select>
         </form>
     </div>
