--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <div id="canvas">
     <div id="info">
         <p>Mines left: <span id="minesLeft">0</span></p>
+        <p>Time: <span id="time">0</span></p>
         <form id="difficulty" onchange="setup()">
             <p id="difficulty-label">Difficulty: </p>
             <select id="levels" name="levels">
@@ -34,8 +35,9 @@
     <p id="credits"><a href="https://github.com/vaniashows">Ivan Ermakov</a> @2018</p>
 </div>
 
-<script src="sketch.js"></script>
 <script src="Cell.js"></script>
+<script src="Stopwatch.js"></script>
+<script src="sketch.js"></script>
 </body>
 
 </html>
